# CASE-demo

./: README.md  readme.md
CASE/: build_backend.sh  soc_subset_1000.json  soc_subset_1000.txt  vote_subset_1000.json  vote_subset_1000.txt
CASE/cpp_imm/: CMakeLists.txt  head.h  iheap.h  imm.h  influence_calculator.h
CASE/design_front/: facebook_subset_1000.json  index.html
CASE/design_front/css/: style.css
CASE/design_front/css/modules/: _base.css  _components.css  _layout.css  _panels.css
CASE/design_front/js/: api.js  config.js  graph.js  main.js  state.js  ui.js  utils.js
CASE/py_api/: app.py
cpp_imm/: api_structures.h  community.h  graph.h  infgraph.h  influence_calculator.cpp
